fix: Text editor content color in dark Mode

--- a/frappe/public/scss/dark.scss
+++ b/frappe/public/scss/dark.scss
@@ -54,7 +54,7 @@
 	}
 
 	.ql-editor.read-mode {
-		span, p, u {
+		span, p, u, strong {
 			background-color: inherit !important;
 			color: inherit !important;
 		}
